--- a/index.html
+++ b/index.html
@@ -16,8 +16,31 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>VUE-BOOLZAPP</title>
   </head>
-  <body></body>
+  <body>
+    <div id="root" class="row">
+      <div class="col-4 bg-sofia border-end border-dark">
+        <div class="row justify-content-between align-items-center">
+          <div class="col-6 d-flex">
+            <div class="container">
+              <img
+                class="w-50 rounded-circle my-2"
+                src="img-bolzapp/avatar_io.jpg"
+                alt="img-sofia"
+              />
+              <span>Sofia</span>
+            </div>
+          </div>
+          <div class="col-6 d-flex justify-content-end">
+            <i class="fa-solid fa-spinner me-3 text-secondary"></i
+            ><i class="fa-solid fa-message me-3 text-secondary"></i
+            ><i class="fa-solid fa-ellipsis-vertical me-3 text-secondary"></i>
+          </div>
+        </div>
+      </div>
+      <div class="col-8"></div>
+    </div>
+  </body>
   <script src="script.js"></script>
 </html>
