--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
                 </div>
                 <div class="col-8 p-0 text-start">
                   <p class="m-0 ">Ricevi notifiche di nuovi messaggi</p>
-                  <p class="text-decoration-underline text-secondary m-0">
+                  <p class="text-decoration-underline text-secondary m-0 py-1">
                     Attiva notifiche desktop
                   </p>
                 </div>
               </div>
             </div>
           </div>
-          <div>
+          <div class="py-1">
             <i class="fa-solid fa-magnifying-glass text-secondary p-2"></i>
             <input
               class="col-9 m-0"
@@ -77,7 +77,7 @@
           >
             <div class="d-flex">
               <img
-                class="w-30 h_50 rounded-circle me-3"
+                class="w-30 h_50 rounded-circle me-3 my-2"
                 :src="'img-bolzapp/avatar' + item.avatar + '.jpg'"
                 alt="avatar-img"
               />
@@ -86,10 +86,10 @@
                 <p class="text-secondary m-0">Ultimo messaggio inviato</p>
               </div>
             </div>
-            <div class="text-secondary mb-5">12:00</div>
+            <div class="text-secondary mb-4">12:00</div>
           </div>
         </div>
-        <div class="col-8">
+        <div class="col-8 bg_text_area">
           <div class="row">
             <div class="col-12">
               <div
@@ -104,7 +104,7 @@
               />
                   <div>
                       <div class="fw-bold">Michele</div>
-                      <p class="text-secondary mb-0">Ultimo accesso oggi alle 12:00</p>
+                      <p class="text-secondary mb-1">Ultimo accesso oggi alle 12:00</p>
                   </div>
               </div>
               <div><i class="fa-solid fa-magnifying-glass text-secondary p-3"></i>
@@ -115,7 +115,8 @@
 
             </div>
           </div>
-          <div class="row"></div>
+          <div class="container h_text_area d-flex justify-content-end">                        
+          </div>
         </div>
       </div>
     </div>
