aggiustato input lato sinistro

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
               </div>
             </div>
           </div>
-          <div class="py-1">
-            <i class="fa-solid fa-magnifying-glass text-secondary p-2"></i>
+          <div class=" row p-1 bg-sofia text-center">
+            <i class=" col-1 bg-light border fa-solid fa-magnifying-glass text-secondary p-1"></i>
             <input
-              class="col-9 m-0"
+              class="col-11 m-0 border"
               type="text"
               placeholder="cerca o inizia una nuova chat"
             />
