--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
     <title>VUE-BOOLZAPP</title>
   </head>
   <body>
-    <div id="root" class="container ">
+    <div id="root" class="container">
       <div class="row">
         <div class="col-4 ps-0">
           <div
@@ -36,8 +37,8 @@
               </div>
             </div>
             <div class="col-8 d-flex justify-content-end">
-              <i class="fa-solid fa-spinner me-3 text-secondary"></i
-              ><i class="fa-solid fa-message me-3 text-secondary"></i
+              <i class="fa-solid fa-spinner me-3 text-secondary"></i>
+              <i class="fa-solid fa-message me-3 text-secondary"></i
               ><i class="fa-solid fa-ellipsis-vertical me-3 text-secondary"></i>
             </div>
           </div>
@@ -54,16 +55,20 @@
                   </div>
                 </div>
                 <div class="col-8 p-0 text-start">
-                  <p class="m-0 ">Ricevi notifiche di nuovi messaggi</p>
-                  <p class="c_p text-decoration-underline text-secondary m-0 py-1">
+                  <p class="m-0">Ricevi notifiche di nuovi messaggi</p>
+                  <p
+                    class="c_p text-decoration-underline text-secondary m-0 py-1"
+                  >
                     Attiva notifiche desktop
                   </p>
                 </div>
               </div>
             </div>
           </div>
-          <div class=" row p-1 bg-sofia text-center">
-            <i class=" c_p col-1 bg-light border fa-solid fa-magnifying-glass text-secondary rounded p-1"></i>
+          <div class="row p-1 bg-sofia text-center">
+            <i
+              class="c_p col-1 bg-light border fa-solid fa-magnifying-glass text-secondary rounded p-1"
+            ></i>
             <input
               class="col-11 m-0 border rounded"
               type="text"
@@ -72,22 +77,22 @@
           </div>
           <div class="container p-0">
             <div
-            v-for="(item, index) in contacts"
-            class="col-12 p-0  border-bottom d-flex justify-content-between align-items-center "
-          >
-            <div class="d-flex c_p">
-              <img
-                class="w-30 h_50 rounded-circle me-3 my-2"
-                :src="'img-bolzapp/avatar' + item.avatar + '.jpg'"
-                alt="avatar-img"
-              />
-              <div>
-                <div class="fw-bold">{{item.name}}</div>
-                <p class="text-secondary m-0">Ultimo messaggio inviato</p>
+              v-for="(item, index) in contacts"
+              class="col-12 p-0 border-bottom d-flex justify-content-between align-items-center"
+            >
+              <div class="d-flex c_p">
+                <img
+                  class="w-30 h_50 rounded-circle me-3 my-2"
+                  :src="'img-bolzapp/avatar' + item.avatar + '.jpg'"
+                  alt="avatar-img"
+                />
+                <div>
+                  <div class="fw-bold">{{item.name}}</div>
+                  <p class="text-secondary m-0">Ultimo messaggio inviato</p>
+                </div>
               </div>
+              <div class="text-secondary mb-4">12:00</div>
             </div>
-            <div class="text-secondary mb-4">12:00</div>
-          </div>
           </div>
         </div>
         <!--CONTENITORE DESTRO-->
@@ -95,52 +100,80 @@
           <div class="row">
             <div class="col-12">
               <div
-              class="row bg-sofia justify-content-between align-items-center border-end border-dark"
-            >
-            <div class="col-12 c_p d-flex justify-content-between align-items-center ">
-              <div class="d-flex align-items-center">
-                <img
-                class="w_50 rounded-circle my-2 me-3"
-                src="img-bolzapp/avatar_1.jpg"
-                alt="img-avatar"
-              />
-                  <div>
+                class="row bg-sofia justify-content-between align-items-center border-end border-dark"
+              >
+                <div
+                  class="col-12 c_p d-flex justify-content-between align-items-center"
+                >
+                  <div class="d-flex align-items-center">
+                    <img
+                      class="w_50 rounded-circle my-2 me-3"
+                      src="img-bolzapp/avatar_1.jpg"
+                      alt="img-avatar"
+                    />
+                    <div>
                       <div class="fw-bold">Michele</div>
-                      <p class="text-secondary mb-1">Ultimo accesso oggi alle 12:00</p>
+                      <p class="text-secondary mb-1">
+                        Ultimo accesso oggi alle 12:00
+                      </p>
+                    </div>
                   </div>
-              </div>
-              <div><i class="fa-solid fa-magnifying-glass text-secondary p-3 c_p"></i>
-                  <i class="fa-solid fa-paperclip me-3 text-secondary c_p"></i>
-                  <i class="fa-solid fa-ellipsis-vertical me-3 text-secondary c_p"></i>
+                  <div>
+                    <i
+                      class="fa-solid fa-magnifying-glass text-secondary p-3 c_p"
+                    ></i>
+                    <i
+                      class="fa-solid fa-paperclip me-3 text-secondary c_p"
+                    ></i>
+                    <i
+                      class="fa-solid fa-ellipsis-vertical me-3 text-secondary c_p"
+                    ></i>
+                  </div>
+                </div>
               </div>
             </div>
 
+            <!--Contenitore chat-->
+            <div class="row h_text_area">
+              <div class="col-12">
+                <div class="row justify-content-end pt-5">
+                  <div class="col-5 bg_green text-center p-3 rounded-3">
+                    scjhkcbshkc
+                  </div>
+                </div>
+                <div class="row justify-content-start ps-4">
+                  <div
+                    class="col-5 text-dark bg-light text-center rounded-3 p-3"
+                  >
+                    scjhkcbshkc
+                  </div>
+                </div>
+                <div class="row justify-content-end pt-5">
+                  <div class="col-5 bg_green text-center p-3 rounded-3">
+                    scjhkcbshkc
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!--CHAT-->
+            <div class="row bg-sofia m-0 p-1 col-12 align-items-center">
+              <i
+                class="fa-regular fa-face-smile c_p mx-3 text-secondary col-1 fa-lg"
+              ></i>
+              <input
+                class="p-2 border-0 col-9 rounded"
+                type="text"
+                placeholder="Scrivi un messaggio"
+              />
+              <i
+                class="fa-solid fa-microphone c_p col-1 text-secondary text-end fa-lg"
+              ></i>
             </div>
           </div>
-
-          <!--Contenitore chat-->
-          <div class="row h_text_area ">     
-            <div class="col-12">
-              <div class="row justify-content-end pt-5">
-                <div class="col-5 bg_green text-center p-3 rounded-3">scjhkcbshkc</div>
-              </div>
-              <div class="row justify-content-start ps-4">
-                <div class="col-5 text-dark bg-light text-center rounded-3 p-3">scjhkcbshkc</div>
-              </div>
-            </div>
-
-                 
-          </div>
-
-          <!--CHAT-->
-          <div class="row bg-sofia m-0 p-1 col-12 align-items-center">
-            <i class="fa-regular fa-face-smile c_p mx-3 text-secondary col-1 fa-lg"></i>
-            <input class="p-2 border-0 col-9 rounded " type="text"placeholder="Scrivi un messaggio">
-            <i class="fa-solid fa-microphone c_p col-1 text-secondary text-end fa-lg"></i>
-          </div>  
         </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
-  <script src="script.js"></script>
 </html>
