--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             </div>
             <div class="col-8 d-flex justify-content-end">
               <i class="fa-solid fa-spinner me-3 text-secondary"></i>
-              <i class="fa-solid fa-message me-3 text-secondary"></i
-              ><i class="fa-solid fa-ellipsis-vertical me-3 text-secondary"></i>
+              <i class="fa-solid fa-message me-3 text-secondary"></i>
+              <i class="fa-solid fa-ellipsis-vertical me-3 text-secondary"></i>
             </div>
           </div>
           <div class="row">
@@ -73,11 +73,14 @@
               class="col-11 m-0 border rounded"
               type="text"
               placeholder="Cerca o inizia una nuova chat"
+              v-model="ricerca"
+              @keyup.enter="ricercaUtenti()"
             />
           </div>
           <div class="container p-0">
             <div
               v-for="(item, index) in contacts "
+              :class="item.visible == false ? 'd-none' : 'd-block'"
               @click="mostraAvatar(index)"
               class="col-12 p-0 border-bottom d-flex justify-content-between align-items-center"
             >
@@ -89,7 +92,9 @@
                 />
                 <div>
                   <div class="fw-bold">{{item.name}}</div>
-                  <p class="text-secondary m-0">Ultimo messaggio inviato</p>
+                  <p class="text-secondary m-0">
+                    {{UltimoMessaggio(item.messages)}}
+                  </p>
                 </div>
               </div>
               <div class="text-secondary mb-4">12:00</div>
@@ -135,14 +140,14 @@
             </div>
 
             <!--Contenitore chat-->
-            <div class="row h_text_area">
+            <div class="row h_text_area overflow-auto">
               <div class="col-12">
                 <div
                   class="row flex-column pt-5"
                   v-for="message in contacts[indice].messages"
                 >
                   <div
-                    class="col-5 text-center p-3 rounded-3 position-relative"
+                    class="col-5 text-center p-3 mb-2 rounded-3 position-relative"
                     :class="messaggiRicevuti(message.status)"
                   >
                     {{message.message}}
